--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -73,7 +73,7 @@ header {
   margin-right: 0.75rem;
 }
 
-#menu {
+#menu, #menu-btn {
   display: none;
   color: #fff;
   font-size: 1.75rem;
@@ -103,7 +103,7 @@ header {
 
 /* Mobile Navigation */
 @media (max-width: 768px) {
-  #menu {
+  #menu, #menu-btn {
     display: block;
   }
 
